--- a/public/vehicle.html
+++ b/public/vehicle.html
@@ -6,25 +6,11 @@
     <title>EzzyBooks - Vehicle Details</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-
-    <!-- PWA Meta Tags -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- PWA Tags -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#1a73e8">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="EzzyBooks">
-
-<!-- Apple Touch Icons -->
-<link rel="apple-touch-icon" href="/icons/icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180x180.png">
-<link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167x167.png">
-
-<!-- Manifest -->
 <link rel="manifest" href="/manifest.json">
-
-<!-- Favicon -->
-<link rel="icon" type="image/png" href="/icons/icon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/icons/icon-16x16.png" sizes="16x16">
+<link rel="icon" href="/icon-192.png">
 </head>
 <body>
     <div class="container">
@@ -62,4 +48,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
