--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#1a73e8">
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon-192.png">
+    <link rel="icon" href="/logo.png">
 </head>
 <body>
     <div class="container">
@@ -154,3 +154,4 @@
     </script>
 </body>
 </html>
+
