--- a/public/vehicle.html
+++ b/public/vehicle.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#1a73e8">
 <link rel="manifest" href="/manifest.json">
-<link rel="icon" href="/icon-192.png">
+<link rel="icon" href="/logo.png">
 </head>
 <body>
     <div class="container">
@@ -48,5 +48,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
