--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <title>EzzyBooks - Login</title>
     <link rel="stylesheet" href="styles.css">
     <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#1a73e8">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/logo.png">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#1a73e8">
+<link rel="manifest" href="/manifest.json">
+<link rel="icon" href="/logo.png">
 </head>
 <body>
     <div class="container">
@@ -154,4 +155,5 @@
     </script>
 </body>
 </html>
+
 
